Update generated web site (02 May 2016)

--- a/layouts/default.cshtml
+++ b/layouts/default.cshtml
@@ -131,7 +131,7 @@
             </a>
           </li>
           <li>
-            <a class="btn btn-default btn-sm" href="@Model.Root/{{ site.rss_path }}">
+            <a class="btn btn-default btn-sm" href="@Model.Root/rss.xml">
               <i class="fa fa-rss fa-lg"></i>
             </a>
           </li>
